add methods to delete institute direction and profile
