# src/docs/swagger.json
@@ -74,6 +74,47 @@
                 }
             }
         },
+        "/v1/direction/{id}": {
+            "delete": {
+                "description": "Delete Direction by id",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete Direction by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id of institute",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/institute": {
             "get": {
                 "description": "return all institutes",
@@ -97,6 +138,47 @@
                 }
             }
         },
+        "/v1/institute/{id}": {
+            "delete": {
+                "description": "Delete Institute by id",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete Institute by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id of institute",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/profile": {
             "get": {
                 "description": "return all profiles",
@@ -109,6 +191,47 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/profile.GetAllProfilesResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/profile/{id}": {
+            "delete": {
+                "description": "Delete profile by id",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Delete profile by id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id of profile",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "500": {
